# compose

./: .gitignore  Cargo.toml
deprecated/: v1_tones.rs
sheets/: canon_in_d.sht
src/: main.rs  parse.rs  sheet.rs
src/instrument/: mod.rs  sine_generator.rs
